[gd_scene load_steps=8 format=3 uid="uid://b0y8wp42nb272"]

[ext_resource type="Script" path="res://code/character/soldier_script.gd" id="1_h6y31"]
[ext_resource type="PackedScene" uid="uid://bv8e613qdxxdy" path="res://prefabs/particles/blood_particles.tscn" id="2_h4tdk"]
[ext_resource type="AnimationLibrary" uid="uid://b8v3aj5kke4fo" path="res://animations/anim_move/anim_crawl.blend" id="3_6c017"]
[ext_resource type="AnimationLibrary" uid="uid://dpwofy8p87krx" path="res://animations/anim_move/anim_move.blend" id="4_e437c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_47ui6"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k0pu7"]
radius = 0.4
height = 1.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dah1e"]
height = 0.3
radius = 0.4

[node name="Soldier" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_h6y31")
blood_particles_prefab = ExtResource("2_h4tdk")

[node name="OnFootAnimPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": ExtResource("3_6c017"),
"anim_move": ExtResource("4_e437c")
}
playback_default_blend_time = 0.1

[node name="StandShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_47ui6")

[node name="CrouchShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_k0pu7")

[node name="CrawlShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("CylinderShape3D_dah1e")

[node name="StandCheckRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
target_position = Vector3(0, 1, 0)
collision_mask = 5

[node name="CrouchCheckRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
target_position = Vector3(0, 1, 0)
collision_mask = 5
